<resources>
    <string name="app_name">Foodo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_btn">Log in</string>
    <string name="register_btn">Register</string>
    <string name="main_logo_description">Main Logo</string>
    <string name="back_button_description">Back Button</string>
    <string name="log_in_title">Log in</string>
    <string name="next_btn">Next</string>
    <string name="auth_example_email">jane@example.com</string>
    <string name="auth_example_password">••••••••••••</string>
    <string name="register_auth_title">Register</string>
    <string name="register_name_example">the_jane</string>
    <string name="sign_up_btn">sign up</string>
    <string name="privacy_policy_link">By signing up, you agree to Photo’s <u>Terms of Service</u> and <u>Privacy Policy</u>.</string>
    <string name="discover_title">Discover</string>
    <string name="new_post_slider">New Post</string>
    <string name="ridhwan_nordin">Ridhwan Nordin</string>
    <string name="what_s_new_today">What’s new today</string>
    <string name="browse_all">Browse all</string>
    <string name="post_image">Post Image</string>
    <string name="see_more">See more</string>
</resources>