<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        tools:context=".presentation.auth.ConfirmRegisterFragment">
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/custom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="ru.ukenov.foodo.presentation.app.CustomAppBarFragment"
            />
        <TextView
            style="@style/auth_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_auth_title" />
        <androidx.appcompat.widget.AppCompatEditText
            style="@style/app_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:inputType="textPersonName"
            android:hint="@string/register_name_example"
            android:layout_marginBottom="16dp"/>
        <androidx.appcompat.widget.AppCompatButton
            style="@style/button_fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_btn" />
        <TextView
            style="@style/app_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_link"
            android:layout_marginTop="32dp" />
    </LinearLayout>
</layout>