<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        tools:context=".presentation.auth.LoginFragment">
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/custom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="ru.ukenov.foodo.presentation.app.CustomAppBarFragment"
            />
        <TextView
            style="@style/auth_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/log_in_title" />
        <androidx.appcompat.widget.AppCompatEditText
            style="@style/app_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:inputType="textEmailAddress"
            android:hint="@string/auth_example_email"
            android:layout_marginBottom="16dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            style="@style/app_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/auth_example_password"
            android:layout_marginBottom="16dp" />
        <androidx.appcompat.widget.AppCompatButton
            style="@style/button_fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in_btn" />
    </LinearLayout>


</layout>