<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.main.FirstPageFragment"
        android:background="@drawable/main_bg">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/sign_form"
            android:src="@drawable/ic_main_logo"
            android:contentDescription="@string/main_logo_description" />
        <LinearLayout
            android:id="@+id/sign_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/white"
            android:paddingVertical="20dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginHorizontal="4.5dp"
                android:text="@string/log_in_btn" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                style="@style/button_fill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginHorizontal="4.5dp"
                android:text="@string/register_btn" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
